--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# This .gitignore will only track makefiles and files with extensions *.cpp, *.h, *.py and *.ino
+# This .gitignore will only track makefiles and files with extensions *.csv, *.txt, *.cpp, *.h, *.py and *.ino
 
 # Blacklist everything
 *
@@ -10,6 +10,8 @@
 !Makefile
 
 # Whitelist the specific file extensions
+!*.csv
+!*.txt
 !*.cpp
 !*.h
 !*.py
