--- a/testSuite/simulators/Debug/makefile
+++ b/testSuite/simulators/Debug/makefile
@@ -8,6 +8,9 @@ RM := rm -rf
 
 # All of the sources participating in the build are defined here
 -include sources.mk
+-include raspiMain/Debug/subdir.mk
+-include raspiMain/subdir.mk
+-include arduinoMain/subdir.mk
 -include subdir.mk
 -include objects.mk
 
