--- a/testSuite/simulators/makefile
+++ b/testSuite/simulators/makefile
@@ -6,8 +6,11 @@ CC = g++
 # Location of Arduino sources.
 ARDU_SRC = ../../arduinoMain
 
+# Location of Raspberry pi sources.
+RASPI_SRC = ../../raspiMain
+
 # Compiler flags.
-CFLAGS = -O0 -g3 -Wall -I$(ARDU_SRC) -std=c++1y -D SIMULATOR
+CFLAGS = -O0 -g3 -Wall -I$(ARDU_SRC) -I$(RASPI_SRC) -std=c++1y -D SIMULATOR
 
 # Build command.
 BUILD_CMD = $(CC) -o $@ $(CFLAGS) $^
@@ -17,9 +20,11 @@ EXECUTABLES = atlanticSimulator
 
 # ---------DEPENDENCIES--------
 
+# General dependencies: Arduino and raspi.
+GENERAL_DEPS = $(ARDU_SRC)/*.cpp $(RASPI_SRC)/*.cpp
+
 # Atlantic simulator:
-ATLANTIC_SIM_DEPS = atlanticSimulator.cpp GpsSimulator.cpp \
-                    $(ARDU_SRC)/Gps.cpp $(ARDU_SRC)/Coord.cpp $(ARDU_SRC)/utility.cpp
+ATLANTIC_SIM_DEPS = atlanticSimulator.cpp GpsSimulator.cpp $(GENERAL_DEPS)
 
 # ---------TARGETS-------------
 # Do not play wth object files, since these programs will
