GPS averaging function

--- a/testSuite/simulators/makefile
+++ b/testSuite/simulators/makefile
@@ -16,7 +16,7 @@ CFLAGS = -O0 -g3 -Wall -I$(ARDU_SRC) -I$(RASPI_SRC) -std=c++1y -D SIMULATOR
 BUILD_CMD = $(CC) -o $@ $(CFLAGS) $^
 
 # Executables. List all of them below.
-EXECUTABLES = atlanticSimulator
+EXECUTABLES = atlanticSimulator GpsAverageTest
 
 # ---------DEPENDENCIES--------
 
@@ -25,6 +25,9 @@ GENERAL_DEPS = $(ARDU_SRC)/*.cpp $(RASPI_SRC)/*.cpp
 
 # Atlantic simulator:
 ATLANTIC_SIM_DEPS = atlanticSimulator.cpp GpsSimulator.cpp $(GENERAL_DEPS)
+
+# GPS averaging test
+GPS_AVERAGING_DEPS = GpsAverageTest.cpp GpsSimulator.cpp $(GENERAL_DEPS)
 
 # ---------TARGETS-------------
 # Do not play wth object files, since these programs will
@@ -35,6 +38,10 @@ all : $(EXECUTABLES)
 
 # Build the Atlantic simulator.
 atlanticSimulator : $(ATLANTIC_SIM_DEPS)
+	$(BUILD_CMD)
+	
+# Build the GPS averaging test.
+GpsAverageTest : $(GPS_AVERAGING_DEPS)
 	$(BUILD_CMD)
 	
 # Clean
